[gd_scene load_steps=15 format=3 uid="uid://d1jxyfrwc67n7"]

[ext_resource type="Script" path="res://src/gui/mainmenu/main_menu.gd" id="1_j6o5n"]
[ext_resource type="Texture2D" uid="uid://cyum24lqx283v" path="res://assets/gui/icons/UI_stone_buttons_2.png" id="1_lvlox"]
[ext_resource type="Texture2D" uid="uid://bb3jen432uku" path="res://assets/gui/MainMenuBg.jpg" id="1_yf72p"]
[ext_resource type="Texture2D" uid="uid://dr1j0khsp8vlp" path="res://assets/gui/icons/UI_stone_buttons_pressed_2.png" id="2_f2sfw"]
[ext_resource type="Texture2D" uid="uid://c2v6dbjxa51by" path="res://assets/gui/icons/UI_stone_buttons_light_2.png" id="3_mxfye"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lw7vp"]
atlas = ExtResource("1_lvlox")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mtvn"]
atlas = ExtResource("2_f2sfw")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3k7s"]
atlas = ExtResource("3_mxfye")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8wnl"]
atlas = ExtResource("1_lvlox")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s21pk"]
atlas = ExtResource("2_f2sfw")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_apr4n"]
atlas = ExtResource("3_mxfye")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmcgf"]
atlas = ExtResource("1_lvlox")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5phcu"]
atlas = ExtResource("2_f2sfw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rfd0"]
atlas = ExtResource("3_mxfye")
region = Rect2(0, 0, 16, 16)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -540.0
offset_right = -960.0
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_j6o5n")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yf72p")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 70
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.820305, 0.497791, 1.34766e-06, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 200
text = "Turn Base RPG"
horizontal_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="PlayButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_lw7vp")
texture_pressed = SubResource("AtlasTexture_5mtvn")
texture_hover = SubResource("AtlasTexture_f3k7s")
stretch_mode = 0

[node name="SettingButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_o8wnl")
texture_pressed = SubResource("AtlasTexture_s21pk")
texture_hover = SubResource("AtlasTexture_apr4n")
stretch_mode = 0

[node name="CloseGameButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_tmcgf")
texture_pressed = SubResource("AtlasTexture_5phcu")
texture_hover = SubResource("AtlasTexture_7rfd0")
stretch_mode = 0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseGameButton" to="." method="_on_close_game_button_pressed"]
